# stock-agent

./: .gitignore  LICENSE  README.md  backup.ps1  manager.ps1
AgentServer/: .env.example  main.py  pyproject.toml  requirements.txt
AgentServer/agent/: __init__.py  approvals.py  checkpoint.py  critic.py  evaluator.py  exporter.py  graph.py  graph_runtime.py  jobs.py  json_tool_parser.py  model_capabilities.py  multi_agent.py  planner.py  reflection.py  runtime.py  state.py  token_counter.py  tool_registry.py  tool_reliability.py  tool_result.py  tools.py
AgentServer/agent/guardrails/: __init__.py  permissions.py
AgentServer/agent/memory/: __init__.py  compressor.py  manager.py
AgentServer/agent/tracing/: __init__.py  recorder.py
AgentServer/common/: __init__.py
AgentServer/common/logger/: __init__.py  loki_logger.py
AgentServer/common/models/: __init__.py  stock.py  strategy.py  user.py
AgentServer/common/utils/: __init__.py  converters.py  crypto.py
AgentServer/core/: __init__.py  base.py  protocols.py  settings.py
AgentServer/core/managers/: __init__.py  akshare_manager.py  analysis_manager.py  base.py  (+8 more)
AgentServer/deploy/: Dockerfile  README.md  docker-compose.yml
AgentServer/nodes/: __init__.py  base.py
AgentServer/scripts/: backfill_daily_stats.py  backfill_news_to_milvus.py  check_sync_status.py  init_subscriptions.py  recalc_daily_stats.py  recalc_market_analysis.py  recalc_sector_ranking.py  set_admin.py  sync_daily_basic.py  sync_fina_indicator.py  sync_limit_list.py  sync_moneyflow.py  sync_stock_basic.py  sync_stock_daily.py  test_listener.py  test_rpc.py  test_rpc_e2e.py  update_sync_date.py  view_milvus_data.py
(+100 files in other folders)
