[project]
name = "stock-agent"
version = "2.0.0"
description = "AI 驱动的分布式多模态股票分析智能体系统"
authors = [
    { name = "Stock Agent Team" }
]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.8.0",
    
    # Database
    "motor>=3.3.0",
    "redis>=5.0.0",
    "pymilvus>=2.3.0",
    
    # Data
    "tushare>=1.2.89",
    "pandas>=2.1.0",
    
    # LLM & Agent
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    
    # Scheduler
    "apscheduler>=3.10.0",
    
    # Observability
    "python-logging-loki>=0.3.1",
    "arize-phoenix>=2.0.0",
    
    # Utils
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
stock-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
